--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Seguir comprando</button>
-          <button type="button" class="btn btn-primary">Finalizar compra</button>
+          <button type="button" class="btn btn-danger" id="finalizar_compra" >Finalizar compra</button>
           <button type="button" class="btn btn-light" disabled>Total de su compra = </button>
           <input type="text" id="totalCarrito" readonly>
 
@@ -316,6 +316,7 @@
     </div>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/app.js"></script>
 
