--- a/blog.html
+++ b/blog.html
@@ -74,8 +74,9 @@
 
 <!--cuerpo-->
 
-<!-- Start Blog Area -->
-<div id="blog" class="blog-area">
+<!-- Start Blog Area--> 
+
+<!--<div id="blog" class="blog-area">
   <div class="blog-inner area-padding">
     <div class="blog-overly"></div>
     <div class="container ">
@@ -180,6 +181,39 @@
   </div>
 </div>
 </main>
+-->
+
+<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">¿Te comerias el helado más grande del mundo?</h5>
+    <p class="card-text">Hace unos meses, la empresa Hennig - Olsen Es AL junto con Trond L Woien, ambas noruegas, 
+      consiguieron hacer un cono de 3,08 metros de altura. El helado estaba compuesto por 
+      95,85 kg de oblea, 60 kg de cobertura de chocolate, 
+      1080 litros de nata y 40 kg de sirope. El deseo de cualquier goloso.
+      4 septiembre 2015.</p>
+    <a href="https://www.lasprovincias.es/sociedad/201509/03/comerias-helado-grande-mundo-20150903220508.html#:~:text=Hace%20unos%20meses%2C%20la%20empresa,El%20deseo%20de%20cualquier%20goloso." 
+    class="btn btn-primary">Ver más</a>
+  </div>
+</div>
+
+<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
 
 <!--footer-->
 <footer class="site-footer">
