--- a/blog.html
+++ b/blog.html
@@ -75,49 +75,7 @@
 <!--cuerpo-->
 
 <!-- Start Blog Area -->
-<div id="blog" class="blog-area">
-  <div class="blog-inner area-padding">
-    <div class="blog-overly"></div>
-    <div class="container ">
-      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <div class="section-headline text-center">
-            <h2 class="h2-h2">Noticias de Helados</h2>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="single-blog">
-            <div class="single-blog-img">
-              <a>
-                <img src="imagenes/elmasgrande.jpg" alt="">
-              </a>
-            </div>
-            <div class="blog-meta">
-              <span class="comments-type">
-                <i class="fa fa-comment-o"></i>
-                
-              </span>
-              <span class="date-type">
-                <i class="fa fa-calendar"></i>4 septiembre 2015, 19:42
-              </span>
-            </div>
-            <div class="blog-text">
-              <h4>
-                <a>¿Te comerias el helado más grande del mundo?</a>
-              </h4>
-              <p>Hace unos meses, la empresa Hennig - Olsen Es AL junto con Trond L Woien, ambas noruegas, 
-                consiguieron hacer un cono de 3,08 metros de altura. El helado estaba compuesto por 
-                95,85 kg de oblea, 60 kg de cobertura de chocolate, 
-                1080 litros de nata y 40 kg de sirope. El deseo de cualquier goloso.</p>
-            </div>
-            <span>
-              <a href="https://www.lasprovincias.es/sociedad/201509/03/comerias-helado-grande-mundo-20150903220508.html#:~:text=Hace%20unos%20meses%2C%20la%20empresa,El%20deseo%20de%20cualquier%20goloso." 
-              class="ready-btn" target="_blank"> Ver más </a>
-            </span>
-          </div>
-        </div>
+<div class=" d-flex flex-wrap container justify-content-center gap-5">
 
   <div class="card" style="width: 18rem;">
     <img src="imagenes/raro.jpg" class="card-img-top" alt="...">
@@ -141,40 +99,7 @@
   </div>
 </div>
 </main>
--->
-
-<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">¿Te comerias el helado más grande del mundo?</h5>
-    <p class="card-text">Hace unos meses, la empresa Hennig - Olsen Es AL junto con Trond L Woien, ambas noruegas, 
-      consiguieron hacer un cono de 3,08 metros de altura. El helado estaba compuesto por 
-      95,85 kg de oblea, 60 kg de cobertura de chocolate, 
-      1080 litros de nata y 40 kg de sirope. El deseo de cualquier goloso.
-      4 septiembre 2015.</p>
-    <a href="https://www.lasprovincias.es/sociedad/201509/03/comerias-helado-grande-mundo-20150903220508.html#:~:text=Hace%20unos%20meses%2C%20la%20empresa,El%20deseo%20de%20cualquier%20goloso." 
-    class="btn btn-primary">Ver más</a>
-  </div>
 </div>
-
-<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-
-<div class=" d-flex flex-wrap container justify-content-center gap-5" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
-
 <!--footer-->
 <footer class="site-footer">
   <div class="container">
